forth/test/fail/test_too_many_input_regs.af
\ Must fail to compile.
fun: test_too_many_input_regs_fail { A B C D E F G H I -- } end
